--- a/blog/src/components/layout.css
+++ b/blog/src/components/layout.css
@@ -55,6 +55,29 @@ body {
 }
 
 
+/* Colors */
+
+.red {
+  color: #e27d60;
+}
+
+.blue {
+  color: rgb(105,207,202);
+}
+
+.yellow {
+  color: #e8a87c;
+}
+
+.orange {
+  color: #c38d9e;
+}
+
+.green {
+  color: #41b3a3;
+}
+
+
 /* Title */
 
 h1, h2, h3, h4, h5, h6 {
