--- a/blog/src/components/variables.scss
+++ b/blog/src/components/variables.scss
@@ -1,13 +1,19 @@
 
 /* Colors */
 
-$red-color: #e27d60;
+$black: #333;
 
-$blue-color: rgb(105,207,202);
+$grey: #666;
 
-$yellow-color: #e8a87c;
+$white: #fff;
 
-$orange-color: #c38d9e;
+$red: #e27d60;
 
-$green-color: #41b3a3;
+$blue: rgb(105,207,202);
+
+$yellow: #e8a87c;
+
+$orange: #c38d9e;
+
+$green: #41b3a3;
 
