--- a/blog/src/components/iam-section.scss
+++ b/blog/src/components/iam-section.scss
@@ -1,3 +1,4 @@
+@import './variables.scss';
 
 /* IAM Section */
 
@@ -9,6 +10,10 @@
 
   a {
     padding: 0;
+  }
+
+  h2 {
+    color: $grey;
   }
 }
 
