--- a/blog/src/components/contact-menu.scss
+++ b/blog/src/components/contact-menu.scss
@@ -5,15 +5,15 @@
 nav#contact {
     text-align: right;
     margin: 1rem;
+    font-size: .9em;
 
     a {
-        border-radius: 10%/50%;
         margin-right: .5rem;
         line-height: .8rem;
 
         &:hover {
-            color: $white;
-            background-color: $blue;
+            color: $red;
+            border-bottom: 1px solid $red;
         }
 
     }
