--- a/blog/src/components/footer.scss
+++ b/blog/src/components/footer.scss
@@ -3,5 +3,9 @@
 /* footer component */
 
 footer {
-    color: $grey;
+    color: $lightest-grey;
+    border-top: 1px solid;
+    padding: 1.5rem 0;
+    font-size: .8rem;
+    letter-spacing: .05rem;
 }
