--- a/blog/src/components/iam-section.scss
+++ b/blog/src/components/iam-section.scss
@@ -16,8 +16,13 @@
     color: $red;
   }
 
+  h1 {
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+
   h2 {
-    color: $grey;
+    color: $light-grey;
   }
 }
 
