--- a/blog/src/components/layout.scss
+++ b/blog/src/components/layout.scss
@@ -64,6 +64,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0.015rem;
   margin-bottom: 1rem;
+  line-height: 1.3em;
 }
 
 h1 {
@@ -82,6 +83,11 @@ h4, h5, h6 {
   font-size: 1rem;
 }
 
+@media (min-width: 800px) {
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1em;
+  }
+}
 
 /* Links */
 
