--- a/blog/src/components/avatar.scss
+++ b/blog/src/components/avatar.scss
@@ -1,3 +1,4 @@
+@import "variables.scss";
 
 /* Avatar component */
 
@@ -9,7 +10,7 @@
   width: 120px;
 }
 
-@media (min-width: 800px) {
+@media ($media-medium) {
   .avatar {
     height: 100px;
     width: 100px;
