--- a/blog/src/components/contact-menu.scss
+++ b/blog/src/components/contact-menu.scss
@@ -3,18 +3,33 @@
 /* contact-menu component */
 
 nav#contact {
-    text-align: right;
-    margin: 1rem;
+    text-align: center;
     font-size: .9em;
+    margin-top: 1rem;
+
+
+    @media ($media-small) {
+        text-align: right;
+        margin: 1rem;
+        font-size: 1rem;
+    }
 
     a {
-        margin-right: .5rem;
-        line-height: .8rem;
+        margin-right: 0;
+        padding: .3rem;
+        line-height: 1rem;
 
         &:hover {
             color: $red;
             border-bottom: 1px solid $red;
         }
 
+        @media ($media-small) {
+            margin-right: .5rem;
+        }
+
+        @media ($media-medium) {
+            margin: 1rem;
+        }
     }
 }
