--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -84,7 +84,7 @@ h4, h5, h6 {
   font-size: 1.2rem;
 }
 
-@media (min-width: 800px) {
+@media ($media-medium) {
   h1, h2, h3, h4, h5, h6 {
     line-height: 1em;
   }
