--- a/blog/src/components/variables.scss
+++ b/blog/src/components/variables.scss
@@ -21,3 +21,9 @@ $orange: #c38d9e;
 
 $green: #41b3a3;
 
+/* media queries */
+
+$media-wide: "min-width: 1024px";
+$media-medium: "min-width: 800px";
+$media-small: "min-width: 375px";
+$media-xsmall: "max-width: 374px";
