--- a/blog/src/pages/projects-page.scss
+++ b/blog/src/pages/projects-page.scss
@@ -7,7 +7,7 @@ body.projects {
         header {
             display: block;
             text-align: left;
-            border-left: 1px solid $grey;
+            border-left: 1px solid $yellow;
             padding-left: 1rem;
 
             div, h3 {
