--- a/blog/src/pages/projects-page.scss
+++ b/blog/src/pages/projects-page.scss
@@ -8,7 +8,7 @@ body.projects {
             display: block;
             text-align: left;
             border-left: 1px solid $yellow;
-            padding-left: 1rem;
+            padding-left: .5rem;
 
             div, h3 {
                 line-height: 1.8rem;
