theme - improved badges code

--- a/blog/src/pages/projects-page.scss
+++ b/blog/src/pages/projects-page.scss
@@ -17,7 +17,7 @@ body.projects {
 
         aside {
             span {
-                @include badge($grey);
+                @include badge($white, $light-grey);
             }
         }
     }
