--- a/blog/src/components/badges.scss
+++ b/blog/src/components/badges.scss
@@ -1,16 +1,18 @@
 @import "shadows.scss";
 
-@mixin badge($color) {
-  color: $white;
+@mixin badge($background_color, $border_color) {
+  color: $border_color;
   font-weight: 600;
   font-size: 0.8rem;
   letter-spacing: 0.05rem;
-  background-color: $color;
-  padding: 0.25rem;
+  background-color: $background_color;
+  padding: 0.3rem;
   margin-top: 1rem;
   margin-right: 0.5rem;
   display: inline-flex;
-  border: 1px solid $color;
+  border: 1px solid $border_color;
   border-radius: 4%/0%;
-  @extend .box-shadow-small;
+  cursor: default;
+  user-select: none;
+  @include box-shadow-big($border_color);
 }
