--- a/blog/src/components/shadows.scss
+++ b/blog/src/components/shadows.scss
@@ -1,6 +1,6 @@
 @import "variables.scss";
 
-.box-shadow-small {
+@mixin box-shadow-small($black) {
     -webkit-box-shadow: 0 1px 3px rgba($black, 0.12), 0 1px 2px rgba($black, 0.24);
     -moz-box-shadow: 0 1px 3px rgba($black, 0.12), 0 1px 2px rgba($black, 0.24);
     -ms-box-shadow: 0 1px 3px rgba($black, 0.12), 0 1px 2px rgba($black, 0.24);
@@ -8,7 +8,7 @@
     box-shadow: 0 1px 3px rgba($black, 0.12), 0 1px 2px rgba($black, 0.24);   
 }
 
-.box-shadow-big {
+@mixin box-shadow-big($black) {
     -webkit-box-shadow: 0 2px 6px rgba($black, 0.12), 0 2px 4px rgba($black, 0.24);
     -moz-box-shadow: 0 2px 6px rgba($black, 0.12), 0 2px 4px rgba($black, 0.24);
     -ms-box-shadow: 0 2px 6px rgba($black, 0.12), 0 2px 4px rgba($black, 0.24);
@@ -16,8 +16,8 @@
     box-shadow: 0 2px 6px rgba($black, 0.12), 0 2px 4px rgba($black, 0.24);
 }
 
-.box-animated-shadow {
-    @extend .box-shadow-small;
+@mixin box-animated-shadow($color) {
+    @include box-shadow-small($color);
     -webkit-transition: all 0.1s ease-in-out;
     -moz-transition: all 0.1s ease-in-out;
     -ms-transition: all 0.1s ease-in-out;
@@ -25,6 +25,6 @@
     transition: all 0.1s ease-in-out;
 
     &:hover {
-        @extend .box-shadow-big;
+        @include box-shadow-big($color);
     }
 }
