theme - responsive cross-browser header fix

--- a/blog/src/components/header.scss
+++ b/blog/src/components/header.scss
@@ -4,6 +4,7 @@
     text-align: center;
     .iam-container {
         margin: auto;
+        text-align: center;
         border-bottom: 1px solid #ccc;
     }
 }
