theme - text and margin adjustments

--- a/blog/src/components/project/project.scss
+++ b/blog/src/components/project/project.scss
@@ -9,5 +9,9 @@ article.project {
         time {
             margin-left: 0;
         }
+
+        h3 {
+            margin-top: .3rem;
+        }
     }
 }
