--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -80,3 +80,15 @@ article.blog-post {
   }
 }
 
+
+
+.gatsby-highlight-code-line {
+  background-color: $grey;
+  display: block;
+  margin-right: -1em;
+  margin-left: -1em;
+  padding-right: 1em;
+  padding-left: 0.75em;
+  border-left: 0.25em solid $yellow;
+}
+
