code snippets - fix to highlight issue

--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -89,6 +89,11 @@ article.blog-post {
   margin-left: -1em;
   padding-right: 1em;
   padding-left: 0.75em;
-  border-left: 0.25em solid $yellow;
+  border-left: 0.3rem solid $yellow;
+}
+
+/* Adjust the position of the line numbers */
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding-left: 2.8em;
 }
 
