code snippets - added github gist, and small tweaks to UI

--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -89,7 +89,7 @@ article.blog-post {
   margin-left: -1em;
   padding-right: 1em;
   padding-left: 0.75em;
-  border-left: 0.3rem solid $yellow;
+  border-left: 0.3em solid $yellow;
 }
 
 /* Adjust the position of the line numbers */
