--- a/blog/src/components/layout.scss
+++ b/blog/src/components/layout.scss
@@ -5,7 +5,6 @@ section.wrapper {
   padding: 0 1rem;
   max-width: 100%;
   margin-top: 1rem;
-  transition: max-width ease-in-out .2s;
 
   @media ($media-small) {
     max-width: 95%;
@@ -23,5 +22,11 @@ section.wrapper {
 
 main {
   margin-top: 1rem;
+}
+
+body.animate {
+  section.wrapper {
+    transition: max-width ease-in-out .2s;
+  }
 }
 
