--- a/blog/src/components/layout.scss
+++ b/blog/src/components/layout.scss
@@ -30,3 +30,12 @@ body.animate {
   }
 }
 
+
+/** CodeSurfer CSS hacks */
+/*
+pre.cs-content, code.cs-scaled-content {
+  background-color: white;
+}
+*/
+/** End of CodeSurfer CSS hacks */
+
