--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -168,36 +168,26 @@ h5,
 h6 {
   letter-spacing: 0.015rem;
   margin-bottom: 1rem;
-  line-height: 1.3em;
+  margin-top: 1rem;
 }
 
 h1 {
   font-size: 1.6rem;
+  line-height: 2rem;
+  color: $black;
 }
 
-h2 {
+h2, h3, h4 {
   font-size: 1.4rem;
+  line-height: 1.8rem;
+  color: $red;
 }
 
-h3 {
-  font-size: 1.4rem;
-}
-
-h4,
 h5,
 h6 {
   font-size: 1.2rem;
-}
-
-@media ($media-medium) {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    line-height: 1em;
-  }
+  line-height: 1.6rem;
+  color: $red;
 }
 
 /* Links */
@@ -267,8 +257,7 @@ article {
 
   header {
     display: block;
-    div,
-    h3 {
+    div {
       line-height: 1.8rem;
     }
   }
@@ -290,10 +279,6 @@ article {
     span {
       @include badge($white, $light-grey);
     }
-  }
-
-  h3,h4,h5,h6 {
-    color: $red;
   }
 
   a {
