code - fhackish fix to code font issues

--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -303,3 +303,10 @@ article {
   clear: both;
   display: table;
 }
+
+/** Codewave hacks */
+.cs-container {
+  font-family: "Consolas, Menlo, Monaco, source-code-pro, Courier New, monospace";
+}
+/** End of Codewave hacks */
+
