--- a/blog/src/pages/error-page.scss
+++ b/blog/src/pages/error-page.scss
@@ -2,17 +2,18 @@
 
 body.error {
   section.wrapper.main {
-    
     text-align: center;
 
     h3, h4, h5, h6 {
       color: $yellow;
     }
     h3 {
+      padding-top: 15vh;
       font-size: 4rem;
       color: $red;
     }
     h4 {
+      padding-top: 10vh;
       font-size: 1.6rem;
     }
   }  
