words - small change to business page, starting blog post draft

--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -35,6 +35,7 @@ article.blog-post {
   
   section.intro {
     margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     p {
       font-size: 1.15rem;
       font-style: italic;
