UI - several bugfixes

--- a/blog/src/components/contextual-menu.scss
+++ b/blog/src/components/contextual-menu.scss
@@ -9,10 +9,14 @@
     }
 
     a {
-        font-size: 1.4rem;
-        margin-right: 1rem;
+        font-size: 1rem;
         &:hover {
             border-bottom: 1px solid $blue;
+        }
+
+        @media ($media-medium) {
+            font-size: 1.4rem;
+            margin-right: 1rem;
         }
     }
 }
