UI - several improvements and fixes

--- a/blog/src/components/badges.scss
+++ b/blog/src/components/badges.scss
@@ -3,11 +3,11 @@
 @mixin badge($background_color, $border_color) {
   color: $border_color;
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: .7rem;
+  line-height: .8rem;
   letter-spacing: 0.05rem;
   background-color: $background_color;
   padding: 0.3rem;
-  margin-top: 1rem;
   margin-right: 0.5rem;
   display: inline-flex;
   border: 1px solid $border_color;
