--- a/blog/src/components/contextual-menu.scss
+++ b/blog/src/components/contextual-menu.scss
@@ -9,14 +9,19 @@
     }
 
     a {
-        font-size: 1rem;
-        &:hover {
-            border-bottom: 1px solid $blue;
+        font-size: .8rem;
+
+        @media ($media-small) {
+            font-size: 1rem;
         }
 
         @media ($media-medium) {
             font-size: 1.4rem;
             margin-right: 1rem;
+        }
+
+        &:hover {
+            border-bottom: 1px solid $blue;
         }
     }
 }
