--- a/blog/src/components/iam-section.scss
+++ b/blog/src/components/iam-section.scss
@@ -6,14 +6,13 @@
   margin: auto;
   margin-top: 1rem;
   padding: 1rem 2rem;
-  text-align: center;
   display: inline-block;
 
   @media ($media-medium) {
     height: 9rem;
   }
 
-  img {
+  * {
     text-align: center;
   }
 
@@ -22,8 +21,14 @@
     color: $yellow;
   }
 
+  h1, h2 {
+    @media ($media-medium) {
+      margin: .75rem 0;
+      text-align: left;
+    }
+  }
+
   h1 {
-    font-size: 1.8rem;
     font-weight: bold;
   }
 
@@ -32,20 +37,11 @@
   }
 
   > div {
-
     @media ($media-medium) {
       margin-right: 2rem;
       float: left;
       min-height: 100%;
       text-align: left;
-    }
-
-    &:nth-child(1) {
-      text-align: center;
-    }
-
-    &:nth-child(2) {
-      padding-top: .8rem;
     }
   }
 }
