tutorial - UI improvements, working on texts and sections

--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -15,6 +15,12 @@ body.blog.post {
 }
 
 article.blog-post {
+
+  h1,h2,h3,h4,h5,h6 {
+    margin-top: 1.5em;
+    margin-bottom: 1em;
+  }
+
   > header {
     margin-bottom: 2.5rem;
     > aside {
