--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -332,13 +332,15 @@ article {
 }
 
 blockquote {
-  text-align: center;
-  padding: 1rem;
-  margin-top: 1.2em;
-  margin-bottom: 1.2em;
+  text-align: left;
+  margin: 3rem 1.2rem;
+  padding: 3rem 0;
   font-style: italic;
   font-size: 1.2rem;
   font-weight: 400;
   color: $light-grey;
+  border: 1px solid $lightest-grey;
+  border-left: none;
+  border-right: none;
 }
 
