--- a/blog/src/components/code.scss
+++ b/blog/src/components/code.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+@import "shadows.scss";
 
 .code-container {
     margin: 1rem 0;
@@ -39,6 +40,7 @@
 
     code[class*="language-"],
     pre[class*="language-"] {
+      @include box-shadow-big($black);
       background: none;
       font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
       white-space: pre;
