UI - fixed auto zoom in iPhone

--- a/blog/src/components/footer.scss
+++ b/blog/src/components/footer.scss
@@ -7,7 +7,7 @@ section.wrapper {
         color: $lightest-grey;
         border-top: 1px solid;
         padding: 1.5rem 0;
-        font-size: .8rem;
+        font-size: 1rem;
         letter-spacing: .05rem;
         margin-top: 3rem;
     }
