--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -84,8 +84,8 @@ mark,
 audio,
 video {
   border: 0;
-  font-size: 100%;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline;
   margin: 0;
   padding: 0;
@@ -107,7 +107,7 @@ section {
 body {
   text-align: justify;
   font-size: 16px;
-  line-height: 1.5rem;
+  line-height: 1.8rem;
 }
 blockquote,
 q {
@@ -222,6 +222,17 @@ ul {
   padding-left: 1rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
+
+  li {
+    margin-bottom: .3rem;
+    
+    dl, 
+    ol, 
+    ul {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+  }
 }
 
 ol {
@@ -274,7 +285,10 @@ article {
 }
 
 article {
-  padding-left: 0.5rem;
+
+  @media ($media-medium) {
+    padding-left: 0.5rem;
+  }
 
   header {
     display: block;
