--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -16,9 +16,14 @@ body.blog.post {
 
 article.blog-post {
 
-  h1,h2,h3,h4,h5,h6 {
+  h1,h2,h3,h4,h5 {
     margin-top: 1.5em;
     margin-bottom: 1em;
+  }
+
+  h6 {
+    margin-top: 1em;
+    margin-bottom: .8em;
   }
 
   > header {
