fixed typos in tutorial, changed styles, removed sample blog posts

--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -332,10 +332,10 @@ article {
   }
 
   time {
-    font-size: 0.8rem;
+    font-size: 1rem;
+    font-style: italic;
     color: $light-grey;
-    font-weight: 600;
-    margin-left: 0.5rem;
+    font-weight: 400;
   }
 
   aside.tech-stack {
