--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -28,6 +28,11 @@ article.blog-post {
 
   > header {
     margin-bottom: 2.5rem;
+
+    > h3 {
+      margin-bottom: 0;
+    }
+
     > aside {
         display: inline-block;
         .avatar {
