--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -305,7 +305,11 @@ strong {
 }
 
 article {
-  margin: 2.5rem 0.5rem 0 0.5rem;
+  margin: 1.5rem 0.5rem 0 0.5rem;
+
+  @media ($media-medium) {
+    margin-top: 2.5rem;
+  }
 }
 
 article {
