--- a/blog/src/components/blog/post.scss
+++ b/blog/src/components/blog/post.scss
@@ -34,7 +34,7 @@ article.blog-post {
     }
 
     > aside {
-        display: inline-block;
+        display: block;
         .avatar {
           height: 1.5rem;
           width: 1.5rem;
