--- a/blog/src/components/footer.scss
+++ b/blog/src/components/footer.scss
@@ -4,8 +4,8 @@
 
 section.wrapper {
     footer {
-        color: $lightest-grey;
-        border-top: 1px solid;
+        color: $grey;
+        border-top: 1px solid $lightest-grey;
         padding: 1.5rem 0;
         font-size: 1rem;
         letter-spacing: .05rem;
