--- a/blog/src/components/core.scss
+++ b/blog/src/components/core.scss
@@ -387,8 +387,8 @@ article {
 
 blockquote {
   text-align: left;
-  margin: 3rem 1.2rem;
-  padding: 3rem;
+  margin: 2rem 0;
+  padding: 1rem;
   font-style: italic;
   font-size: 1.3rem;
   line-height: 2rem;
@@ -397,7 +397,12 @@ blockquote {
   border-left: none;
   border-right: none;
   border-radius: 0.3rem;
+  text-align: center;
   @include box-shadow-big($darker-white);
+
+  @media ($media-medium) {
+    text-align: left;
+  }
 
   strong {
     color: $black;
