--- a/blog/src/components/iam-section.scss
+++ b/blog/src/components/iam-section.scss
@@ -29,10 +29,14 @@
   }
 
   h1 {
+    line-height: 2rem;
+    font-size: 1.8em;
     font-weight: bold;
   }
 
   h2 {
+    line-height: 1.6em;
+    font-size: 1.4em;
     color: $light-grey;
   }
 
